@@ -4,6 +4,7 @@
 	(mixi-encode-time-value): Abolished.
 	(mixi-time-less-p): Simplified.
 	(mixi-time-add): Simplified.
+	(mixi-seconds-to-time): Simplified.
 
 2006-10-24  OHASHI Akira  <bg66@koka-in.org>
 
